+ Added client side map opacity settings to make up for EE vector visualization lacking them. + Fixed issue #12 (masking not applied at all zoom levels) + Bumped refresh/loading button/icon to the right o align with map edge.

--- a/css/refine.css
+++ b/css/refine.css
@@ -106,6 +106,10 @@ html{}
     
 }
 
+.rerun {
+    float:right;
+}
+
 .species .v {
     padding-left:1em;
 }
